добавил файлы политики в проект
